; ModuleID = '/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_frontend.c_input_poll_net.c'
source_filename = "/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_frontend.c_input_poll_net.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@netplay_data = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @input_poll_net() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32*, i32** @netplay_data, align 8
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = call i32 @netplay_should_skip(i32* %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %13, label %6

6:                                                ; preds = %0
  %7 = load i32*, i32** %1, align 8
  %8 = call i64 @netplay_can_poll(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %6
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @netplay_poll(i32* %11)
  br label %13

13:                                               ; preds = %10, %6, %0
  ret void
}

declare dso_local i32 @netplay_should_skip(i32*) #1

declare dso_local i64 @netplay_can_poll(i32*) #1

declare dso_local i32 @netplay_poll(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
